0.1.8
------------------------------------------------------------------------
Updated to libraw 0.6.10:
 - Support for loading White Balance data from Sony ARW files edited with Sony IDC software.
Updated to libraw 0.6.9:
 - Better support for Samsung S85.
 - Fixed possible integer overflow in wavelet denoising code.
Updated to libraw 0.6.8:
 - Changes in QuickTake 100 files processing.
Updated to libraw 0.6.7:
 -Added support for Samsung S85.
 -Changes in external jpeg (metadata) processing.
Updated to libraw 0.6.6:
 -Changes in Panasonic FZ50 processing code.
Updated to libraw 0.6.5:
 -Fixed file descriptor and buffer memory leak when thumbnail extractor is called,
  but library object is not properly initialized.
 -Fixes in Imacon files unpacking.
 -Fixes in Hasselblad .fff files unpacking.

Fix PPM color preview extraction.

0.1.7
------------------------------------------------------------------------
Updated to LibRaw 0.6.3 : NEF processing code changed (some overflow control added).
Updated to LibRaw 0.6.2.
New cameras: Canon G10 & 5D Mk2, Leaf AFi 7, Leica D-LUX4, 
             Panasonic FX150 & G 1, Fujifilm IS Pro.

0.1.6
------------------------------------------------------------------------
Updated to LibRaw 0.6.1.
Ported to LibRaw 0.6.0 Api. Removed dcraw.c and DcrawBinary class.
New cameras: Canon 50D, Sony A900, Nikon D90 & P6000, Panasonic LX3 FZ28.

0.1.5
------------------------------------------------------------------------
- API changed: Add white point settings support (dcraw -S option)
               Add new method to set/check brigness settings aviability
               Raw decoding settings widget re-designed to group each 
               options by features using tabs.
               Add support dcraw options -m -A -P -p -o.
               Add new signal emited when something is changed in settings.
               Add new integer and double slider widgets with
               default values and reset buttons.